# chat-Bot-

./: README.md  main.py  pyproject.toml  requirements.txt
chatmmodels/: app.py  chat.py  llm.py  pdf_utils.py  streamlit_chatbot.py
chatmmodels/.streamlit/: config.toml
embeddingmodels/: embeddings.py  huggingfaceembeddings.py
