[project]
name = "genrative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mistralai>=1.1.5",
    "pymupdf>=1.27.2.3",
    "python-dotenv",
    "streamlit",
]
